--- a/src/IdentityManager2/package.json
+++ b/src/IdentityManager2/package.json
@@ -7,6 +7,6 @@
     "gulp-clean-css": "4.3.0",
     "gulp-concat": "2.6.1",
     "gulp-less": "4.0.1",
-    "lodash": "^4.17.19"
+    "lodash": "4.17.19"
   }
 }
