--- a/src/IdentityManager2/package.json
+++ b/src/IdentityManager2/package.json
@@ -6,7 +6,6 @@
     "gulp": "4.0.2",
     "gulp-clean-css": "4.3.0",
     "gulp-concat": "2.6.1",
-    "gulp-less": "4.0.1",
-    "lodash": "4.17.19"
+    "gulp-less": "4.0.1"
   }
 }
