--- a/src/IdentityManager2/IdentityManager2.csproj
+++ b/src/IdentityManager2/IdentityManager2.csproj
@@ -20,18 +20,16 @@
     <EmbeddedResource Include="Assets\Content\logo.jpg" />
     <EmbeddedResource Include="Assets\Content\logo.png" />
     <EmbeddedResource Include="Assets\Content\rockman.png" />
-
     <EmbeddedResource Include="Assets\Scripts\Bundle.js" />
-
     <EmbeddedResource Include="Assets\Templates\**" />
-
     <EmbeddedResource Include="Assets\Content\fonts\glyphicons-halflings-regular.svg" />
     <EmbeddedResource Include="Assets\Content\fonts\glyphicons-halflings-regular.eot" />
     <EmbeddedResource Include="Assets\Content\fonts\glyphicons-halflings-regular.ttf" />
     <EmbeddedResource Include="Assets\Content\fonts\glyphicons-halflings-regular.woff" />
-    
     <EmbeddedResource Include="Assets\Content\bootstrap.min.css" />
     <EmbeddedResource Include="Assets\Content\Style.min.css" />
+    <Content Update="package-lock.json" CopyToPublishDirectory="Never" />
+    <Content Update="package.json" CopyToPublishDirectory="Never" />
   </ItemGroup>
 
   <ItemGroup>
